--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
     "php": ">=8.1",
     "ext-dom": "*",
     "php-di/php-di": "^7.0.6",
-    "symfony/dotenv": "^6.3.7"
+    "symfony/dotenv": "^6.3.7",
+    "mjfklib/utils": "^1.0.0"
   },
   "require-dev": {
     "phpstan/extension-installer": "^1.3.1",
