--- a/composer.json
+++ b/composer.json
@@ -3,18 +3,18 @@
   "license": "MIT",
   "homepage": "https://github.com/mjfklib",
   "require": {
-    "php": ">=8.1",
+    "php": "^8.1",
     "ext-dom": "*",
-    "php-di/php-di": "^7.0.6",
-    "symfony/dotenv": "^6.3.7",
-    "mjfklib/utils": "^1.0.0"
+    "php-di/php-di": "^7.0",
+    "symfony/dotenv": "^6.3",
+    "mjfklib/utils": "^1.0"
   },
   "require-dev": {
-    "phpstan/extension-installer": "^1.3.1",
-    "phpstan/phpstan": "^1.10.48",
-    "phpstan/phpstan-deprecation-rules": "^1.1.4",
-    "phpstan/phpstan-strict-rules": "^1.5.2",
-    "squizlabs/php_codesniffer": "^3.8.0"
+    "phpstan/extension-installer": "^1.3",
+    "phpstan/phpstan": "^1.10",
+    "phpstan/phpstan-deprecation-rules": "^1.1",
+    "phpstan/phpstan-strict-rules": "^1.5",
+    "squizlabs/php_codesniffer": "^3.8"
   },
   "config": {
     "allow-plugins": {
